Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28161

Filedialog can start up with the wrong start up directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.5, 5.0.2
    • 4.8.3, 5.0.0 RC 1
    • None
    • Mac - Cocoa only
    • d75d86190bca85841db2040d50184f4c6886ef89 (5.0), b724dc51683bb250e8434c2115709a0b178736a6 (4.8)

      When a file dialog is shown after another one was shown then it can end up showing the directory that was last shown by the previous dialog instead of the directory that has been specifically specified by the working directory argument to the file dialog function. Attached is an example that reproduces this problem.

      for 5.0, the dir parameter also doesn't work, the filedialog only open the current directory.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            andysh Andy Shaw
            Votes:
            4 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes