Ensure the native filedialog starts up with the right directory

On Mac it was not starting the dialog with the specified directory when
one was present. If a filename was given as well then it would start up
fine.

Task-number: QTBUG-28161
Change-Id: I7cce0d065dd57e6433ce62380d4263d6e20b6e7c
Reviewed-by: Liang Qi <liang.qi@digia.com>
(cherry picked from commit d75d86190bca85841db2040d50184f4c6886ef89)
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@digia.com>